Use Edka mirrored images to bypass registry.k8s.io blocks on Hetzner IPs

--- a/deploy/kubernetes/hcloud-csi.yml
+++ b/deploy/kubernetes/hcloud-csi.yml
@@ -193,7 +193,7 @@ spec:
       initContainers:
       containers:
         - name: csi-node-driver-registrar
-          image: registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.15.0
+          image: docker.io/edka/rk8s-sig-storage-csi-node-driver-registrar:v2.15.0
           imagePullPolicy: IfNotPresent
           args:
             - --kubelet-registration-path=/var/lib/kubelet/plugins/csi.hetzner.cloud/socket
@@ -206,7 +206,7 @@ spec:
             limits: {}
             requests: {}
         - name: liveness-probe
-          image: registry.k8s.io/sig-storage/livenessprobe:v2.17.0
+          image: docker.io/edka/rk8s-sig-storage-livenessprobe:v2.17.0
           imagePullPolicy: IfNotPresent
           volumeMounts:
           - mountPath: /run/csi
@@ -315,7 +315,7 @@ spec:
       initContainers:
       containers:
         - name: csi-attacher
-          image: registry.k8s.io/sig-storage/csi-attacher:v4.10.0
+          image: docker.io/edka/rk8s-sig-storage-csi-attacher:v4.10.0
           imagePullPolicy: IfNotPresent
           resources:
             limits: {}
@@ -327,7 +327,7 @@ spec:
             mountPath: /run/csi
 
         - name: csi-resizer
-          image: registry.k8s.io/sig-storage/csi-resizer:v2.0.0
+          image: docker.io/edka/rk8s-sig-storage-csi-resizer:v2.1.0
           imagePullPolicy: IfNotPresent
           resources:
             limits: {}
@@ -337,7 +337,7 @@ spec:
             mountPath: /run/csi
 
         - name: csi-provisioner
-          image: registry.k8s.io/sig-storage/csi-provisioner:v6.1.0
+          image: docker.io/edka/rk8s-sig-storage-csi-provisioner:v6.1.1
           imagePullPolicy: IfNotPresent
           resources:
             limits: {}
@@ -351,7 +351,7 @@ spec:
             mountPath: /run/csi
 
         - name: liveness-probe
-          image: registry.k8s.io/sig-storage/livenessprobe:v2.17.0
+          image: docker.io/edka/rk8s-sig-storage-livenessprobe:v2.17.0
           imagePullPolicy: IfNotPresent
           resources:
             limits: {}
